<resources>
    <string name="app_name">智慧楼宇</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>


    <string name="company_profile">公司简介</string>
    <string name="floor_navigation">楼层导航</string>
    <string name="suggestion_box">匿名意见箱</string>

    <string name="back">返回</string>

    <string name="hncr_build">湘交科办公大楼</string>

    <string name="edit_hint">请输入搜索姓名</string>

    <string name="search">搜索</string>

    <string name="input_content">请输入内容</string>

    <string name="input_qrcode">手机扫码填写</string>
    
    <string name="submit">提交</string>

    <string name="cancel">清除</string>

</resources>