<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:id="@+id/rl_floor_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_back_floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="19dp"
            android:src="@drawable/ic_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/back">
        </TextView>

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hncr_build"
            android:textSize="24sp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            >
        </TextView>


        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="60dp"
            >

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#1B5BD1">


                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_hint"
                    android:background="@null"
                    android:maxLines="1"
                    android:drawableStart="@mipmap/ic_search"
                    android:textSize="11sp"
                    android:autofillHints="auto" />


            </LinearLayout>



            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:background="@drawable/ic_search"
                android:layout_marginStart="10dp"
                android:textSize="11sp"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                >
            </TextView>
        </LinearLayout>


        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:columnWidth="90dp"
            android:gravity="center"
            android:horizontalSpacing="25dp"
            android:numColumns="5"
            android:stretchMode="columnWidth"
            android:verticalSpacing="20dp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/ll_search"/>


    </RelativeLayout>

</layout>